feat: hook, context, form

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "tabWidth": 2,
   "jsxSingleQuote": true,
   "singleQuote": true,
-  "useTabs": false,
+  "useTabs": true,
   "bracketSameLine": false,
   "semi": true,
   "singleAttributePerLine": false
